--- a/index.css
+++ b/index.css
@@ -11,13 +11,14 @@
 html, body {
   width: 100%;
   height: 100%;
+  overscroll-behavior: none;
 }
 body {
  display: flex;
  align-items: stretch;
  justify-content: center;
 }
-#upload, #dynamic {display: none;}
+#upload {display: none;}
 main {
   width: 100%;
   height: 100%;
@@ -62,15 +63,18 @@ header button {
 }
 .video-player {
   width: 100%;
-  height: 40vh;
+  height: auto;
   min-height: 20px;
   position: relative;
 }
-.video-player #video {
+.video-player #dynamic {
   width: 100%;
-  height: 100%;
+  height: 45vh;
   position: static;
   display: block;
+  background-size: cover;
+  object-fit: auto;
+  background: black;
 }
 .video-player .controller {
   width: 100%;
@@ -85,9 +89,6 @@ header button {
   opacity: 0;
   transition: opacity 0.6s;
   background: linear-gradient(360deg, rgba(0,0,0,.23), transparent);
-}
-.video-player .controller:hover {
- opacity: 1;
 }
 .controller .btns {
   width: 50%;
@@ -109,7 +110,7 @@ header button {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(38, 45, 23);
+  color: white;
 }
 .controller .btns button:focus {
   outline: none;
