--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ header button {
 }
 .video-player {
   width: 100%;
-  height: auto;
+  height: 100%;
   min-height: 20px;
   position: relative;
 }
